--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.4.1",
+    "@heroicons/react": "^2.1.5",
     "@nextui-org/calendar": "^2.0.11",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
@@ -25,7 +26,7 @@
     "convex": "^1.15.0",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.438.0",
-    "next": "^14.2.13",
+    "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
