--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "convex": "^1.15.0",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.438.0",
-    "next": "^14.2.14",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.15",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/json-schema": "^7.0.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
