--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.15.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.438.0",
     "next": "^14.2.15",
